# reality-authenticator

./: .env.example  .gitignore  README.md  pyproject.toml
cloud-functions/: .funcignore  README.md  function_app.py  local.settings.json.example  pyproject.toml  requirements.txt
cloud-functions/reality_cloud/: __init__.py  audit.py  auth.py  azure_clients.py  blob_verification.py  challenge.py  config.py  devices.py  errors.py  handlers.py  iot.py  manifest.py  presentation.py  proof.py  qr.py  signing.py  signing_contract.py  signing_key_vault.py  storage.py  storage_azure.py  storage_contract.py  telemetry.py  verification.py  web_app.py
cloud-functions/tests/: conftest.py  test_admin_api.py  test_app_pages.py  test_auth.py  test_blob_verification.py  test_challenge.py  test_cloud_config.py  test_ingest_evidence.py  test_iot.py  test_issue_proof.py  test_manifest.py  test_proof.py  test_public_proof.py  test_qr.py  test_signer_factory.py  test_signing.py  test_signing_key_vault.py  test_start_session.py  test_storage.py  test_storage_azure.py  test_storage_contract.py  test_verification_page.py  test_verify_proof.py
cloud-functions/web/: app.css  app.html  app.js  verify.css  verify.html
edge-agent/: README.md  pyproject.toml
edge-agent/src/reality_edge/: config.py  (+9 more)
edge-agent/tests/: conftest.py  test_blob_upload.py  test_cloud_client.py  test_cloud_sync.py  test_config.py  test_dry_run.py  test_evidence.py  test_hardware_button.py  test_hardware_media.py  test_hardware_sensors.py  test_hardware_status.py  test_iot_agent.py  test_main.py  test_real_capture.py
(+67 files in other folders)
