[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reality-edge"
version = "0.1.0"
description = "Reality Authenticator Edge Agent"
requires-python = ">=3.11"
dependencies = [
    "reality-core>=0.1.0",
]

[project.optional-dependencies]
raspberry-pi = [
    "pyserial>=3.5,<4",
    "azure-iot-device>=2.14,<3",
]
iot = [
    "azure-iot-device>=2.14,<3",
]

[project.scripts]
reality-edge = "reality_edge.main:main"

[tool.setuptools.packages.find]
where = ["src"]
